--- a/ShadowBlog/Views/BlogPosts/Details.cshtml
+++ b/ShadowBlog/Views/BlogPosts/Details.cshtml
@@ -21,7 +21,7 @@
                                 <div class="post-meta">
                                     <ul>
                                         <li>By</li>
-                                        <li><a href="#">Jordan Hopps</a></li>
+                                        <li><a href="https://jordanthopps.netlify.app/#about" target="_blank">Jordan Hopps</a></li>
                                         <li>@Model.Created.ToString("MMM dd, yyyy")</li>
                                     </ul>
                                 </div>
@@ -36,9 +36,8 @@
                             <div class="row">
                                 <div class="col-lg-6 col-md-4 col-sm-5">
                                     <ul class="social-area">
-                                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-github"></i></a></li>
                                         <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                                     </ul>
                                 </div>
@@ -50,21 +49,6 @@
                                         <span><a href="#">#SWIMWEAR</a></span>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="blog-about-author d-flex">
-                            <div class="thumb">
-                                <img src="assets/img/author.png" alt="img">
-                            </div>
-                            <div class="author-info">
-                                <h4 class="author-name">Alison Morgan</h4>
-                                <p class="author-content">Mauris massa nisi, viverra ac sapien, tempor auctor tempus pulvinar varius vestibulum. Sed pellen tesque quis sem eget euismod. Duis ut risus consectetur justo euismod viverra in purus. </p>
-                                <ul class="social-area">
-                                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                </ul>
                             </div>
                         </div>
                         <div class="comments-inner-wrap">
