--- a/ShadowBlog/Views/BlogPosts/Details.cshtml
+++ b/ShadowBlog/Views/BlogPosts/Details.cshtml
@@ -1,4 +1,8 @@
 ﻿@using ShadowBlog.Models
+@using ShadowBlog.Services.Interfaces
+@using Microsoft.AspNetCore.Identity
+@inject IImageService _imageService
+@inject UserManager<BlogUser> _userManager
 @model ShadowBlog.Models.BlogPost
 
 @{
@@ -54,33 +58,59 @@
                         <div class="comments-inner-wrap">
                             <h3 class="comments-title mt-5">Leave A Reply</h3>
                             <!-- COMMENT FORM -->
-                            <form class="comment-form">
-                                <div class="row">
-                                    <div class="col-lg-4">
-                                        <div class="single-input-wrap">
-                                            <input type="text" placeholder="NAME">
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <form class="comment-form" asp-controller="Comments" asp-action="Create">
+                                    <div class="form-group">
+                                        <input type="hidden" name="BlogPostId" value="@Model.Id" />
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                <div class="single-input-wrap d-flex w-100">
+                                                    <textarea name="CommentBody" rows="5" placeholder="ADD A COMMENT"></textarea>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <input type="submit" value="Post Comment" class="submit-btn btn btn-base">
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4">
-                                        <div class="single-input-wrap">
-                                            <input type="email" placeholder="EMAIl">
+                                </form>
+                            }
+                            else
+                            {
+                                //If the user is not logged in, I will prompt them to login in order to see the create comment form.
+                                <a class="btn btn-lg btn-dark btn-block w-100" returnUrl="" asp-area="Identity" asp-page="/Account/Login">Log In to add a comment</a>
+                            }
+                            <div class="row">
+                                <h2>Comments</h2>
+                                @foreach (var comment in Model.Comments.OrderByDescending(c => c.Created))
+                                {
+                                    <div class="offset-1 col-10">
+                                        <div class="media mb-2">
+                                            @if (comment.BlogUser.ImageData is not null)
+                                            {
+                                                <img src="@_imageService.DecodeImage(comment.BlogUser.ImageData, comment.BlogUser.ImageType)" class="mr-3 img-fluid" alt="...">
+                                            }
+                                            else
+                                            {
+                                                <img src="~/img/generic-user-purpbg.png" class="mr-3 img-fluid" alt="...">
+                                            }
+                                            <div class="media-body">
+                                                <h5 class="mt-0">Created by @comment.BlogUser.FullName on @comment.Created.ToString("MMM dd, yyyy")</h5>
+                                                <p>@comment.CommentBody</p>
+
+                                                @*Ask if this is my comment*@
+                                                @if (comment.Moderated is null && comment.BlogUserId == _userManager.GetUserId(User))
+                                                {
+                                                    //this button needs to trigger an Edit modal
+                                                    <button class="btn btn-dark px-3 btnEdit" data-bs-toggle="modal" data-UserCommentId="@comment.Id" data-bs-target="#EditModal">Edit</button>
+                                                }
+
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4">
-                                        <div class="single-input-wrap">
-                                            <input type="text" placeholder="WEBSITE">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12">
-                                        <div class="single-input-wrap d-flex">
-                                            <textarea placeholder="ADD A COMMENT"></textarea>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <input type="submit" value="Post Comment" class="submit-btn btn btn-base">
-                                    </div>
-                                </div>
-                            </form>
+                                }
+                            </div>
                             <!-- ./COMMENT FORM -->
                         </div>
                     </div>
@@ -88,6 +118,40 @@
             </div>
         </div>
     </div>
+    <div class="modal fade" id="EditModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Editing Comment...</h5>
+                </div>
+                <div class="modal-body">
+                    <form asp-controller="Comments" asp-action="Edit">
+                        <input type="hidden" id="ModalCommentId" name="CommentId" />
+                        <textarea id="ModalCommentBody" name="Body" rows="5" class="w-100"></textarea>
+                        <button class="btn btn-dark w-100" type="submit">Submit</button>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    @section Scripts
+{
+        <script>
+
+        document.querySelectorAll("button.btnEdit").forEach(btn => {
+            btn.addEventListener("click", function () {
+                //Transfer the value of the button's data-UserCommentId to the Modals hidden input
+                document.getElementById("ModalCommentId").value = this.getAttribute('data-UserCommentId');
+                //I need to use JS to get the comment closest to the button i just clicked
+                let closestComment = this.closest(".media-body").querySelector("p").textContent;
+                document.getElementById("ModalCommentBody").textContent = closestComment;
+            });
+        });
+        </script>
+    }
 </section>
 <!-- latest post Area End -->
 <!-- instagram Area Start-->
@@ -126,54 +190,4 @@
         </div>
     </div>
 </div>
-<!-- instagram Area End -->
-<!-- footer area start -->
-<footer class="footer-area text-center">
-    <div class="footer-inner">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-4">
-                    <div class="footer-widget widget">
-                        <h4 class="widget-title">Follow me</h4>
-                        <ul class="social-area">
-                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="footer-widget widget">
-                        <div class="footer-logo d-inline-block">
-                            <img src="assets/img/logo-2.png" alt="img">
-                        </div>
-                        <p>Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti disse in orci enim.</p>
-                        <form>
-                            <div class="single-input-wrap mb-0">
-                                <input type="email" placeholder="Enter Email">
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="footer-widget widget widget_link">
-                        <h4 class="widget-title">Popular tags</h4>
-                        <ul>
-                            <li><a href="home-3.html">#TRAVEL</a></li>
-                            <li><a href="home-3.html">#LIFE</a></li>
-                            <li><a href="home-3.html">#LAKE</a></li>
-                            <li><a href="home-3.html">#VLOGOS</a></li>
-                            <li><a href="home-3.html">#ALTEGO</a></li>
-                            <li><a href="home-3.html">#MONACO</a></li>
-                            <li><a href="home-3.html">#SELECTED</a></li>
-                            <li><a href="home-3.html">#HELLO</a></li>
-                            <li><a href="home-3.html">#ITSON</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
-<!-- footer area end -->   
+<!-- instagram Area End --> 
