--- a/ShadowBlog/Views/Comments/Index.cshtml
+++ b/ShadowBlog/Views/Comments/Index.cshtml
@@ -31,7 +31,7 @@
                 @Html.DisplayNameFor(model => model.ModeratedBody)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Moderationtype)
+                @Html.DisplayNameFor(model => model.ModerationType)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.BlogPost)
@@ -67,7 +67,7 @@
                 @Html.DisplayFor(modelItem => item.ModeratedBody)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Moderationtype)
+                @Html.DisplayFor(modelItem => item.ModerationType)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.BlogPost.Abstract)
