--- a/ShadowBlog/Views/Comments/Delete.cshtml
+++ b/ShadowBlog/Views/Comments/Delete.cshtml
@@ -48,10 +48,10 @@
             @Html.DisplayFor(model => model.ModeratedBody)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Moderationtype)
+            @Html.DisplayNameFor(model => model.ModerationType)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Moderationtype)
+            @Html.DisplayFor(model => model.ModerationType)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.BlogPost)
