--- a/ShadowBlog/Views/Comments/Edit.cshtml
+++ b/ShadowBlog/Views/Comments/Edit.cshtml
@@ -59,9 +59,9 @@
                 <span asp-validation-for="ModeratedBody" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Moderationtype" class="control-label"></label>
-                <select asp-for="Moderationtype" class="form-control"></select>
-                <span asp-validation-for="Moderationtype" class="text-danger"></span>
+                <label asp-for="ModerationType" class="control-label"></label>
+                <select asp-for="ModerationType" class="form-control"></select>
+                <span asp-validation-for="ModerationType" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
