--- a/ShadowBlog/Views/Shared/_Layout.cshtml
+++ b/ShadowBlog/Views/Shared/_Layout.cshtml
@@ -10,6 +10,10 @@
     <!--favicon icon-->
     @*<link rel="icon" href="assets/img/fevicon.png">*@
 
+    <!--Bootstrap | I put this in-->
+    @*<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">*@
+
+
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@400;600&family=Lustria&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 
@@ -75,73 +79,71 @@
     </div>
     <!-- /Side Nav Menu-->
     <!--Top Nav Menu-->
-    <header class="navbar-area">
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid nav-container">
-                <div class="responsive-mobile-menu">
-                    <button class="menu toggle-btn d-block d-lg-none" data-target="#themefie_main_menu"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="icon-left"></span>
-                        <span class="icon-right"></span>
-                    </button>
-                </div>
-                <div class="lawel-header-left">
-                    <div class="side-menu-bar d-inline-flex">
-                        <i id="side-menu-open" class="fa fa-bars"></i>
+    <div>
+        <header class="navbar-area">
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid nav-container">
+                    <div class="responsive-mobile-menu">
+                        <button class="menu toggle-btn d-block d-lg-none" data-target="#themefie_main_menu"
+                                aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="icon-left"></span>
+                            <span class="icon-right"></span>
+                        </button>
+                    </div>
+                    <div class="lawel-header-left">
+                        <div class="side-menu-bar d-inline-flex">
+                            <i id="side-menu-open" class="fa fa-bars"></i>
+                        </div>
+                    </div>
+                    <div class="collapse navbar-collapse" id="themefie_main_menu">
+                        <ul class="navbar-nav menu-open text-end">
+                            <li>
+                                <a asp-controller="Home" asp-action="Index">Home</a>
+                            </li>
+                            <li>
+                                <a href="https://jordanthopps.netlify.app/#about" target="_blank">About</a>
+                            </li>
+                            <li>
+                                <a asp-controller="Home" asp-action="ContactMe">Contact</a>
+                            </li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-github"></i></a></li>
+                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li class="current-menu-item menu-item-has-children">
+                                Account
+                                <ul class="sub-menu">
+                                    <li>
+                                        <a asp-area="Identity" asp-page="/Account/Login">Login</a>
+                                    </li>
+                                    <li>
+                                        <a asp-area="Identity" asp-page="/Account/Manage/Index">Manage Account</a>
+                                    </li>
+                                    <li>
+                                        <a asp-area="Identity" asp-page="/Account/Register">Register</a>
+                                    </li>
+                                    <li>
+                                        <a asp-area="Identity" asp-page="/Account/Logout">Logout</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <form asp-action="SearchPosts" asp-controller="BlogPosts" class="input-group rounded w-50 px-4">
+                            <input type="search" class="form-control rounded" placeholder="Search..." aria-label="Search"
+                                   aria-describedby="search-addon" name="searchTerm" />
+                            <button class="input-group-text border-0" type="submit" id="search-addon">
+                                <i class="fas fa-search"></i>
+                            </button>
+                        </form>
                     </div>
                 </div>
-                <div class="collapse navbar-collapse" id="themefie_main_menu">
-                    <ul class="navbar-nav menu-open text-end">
-                        <li>
-                            <a asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li>
-                            <a href="https://jordanthopps.netlify.app/#about" target="_blank">About</a>
-                        </li>
-                        <li>
-                            <a asp-controller="Home" asp-action="ContactMe">Contact</a>
-                        </li>
-                        @*<li class="current-menu-item menu-item-has-children">Social
-                            <ul class="sub-menu"> 
-                                <li><a href="#"><i class="fab fa-twitter"></i>   Twitter</a></li>
-                                <li><a href="#"><i class="fab fa-github"></i>    GitHub</a></li>
-                                <li><a href="#"><i class="fab fa-linkedin-in"></i>    LinkedIn</a></li>
-                            </ul>
-                        </li>*@
-                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fab fa-github"></i></a></li>
-                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                        <li class="current-menu-item menu-item-has-children">
-                            Account
-                            <ul class="sub-menu">
-                                <li>
-                                    <a asp-area="Identity" asp-page="/Account/Login">Login</a>
-                                </li>
-                                <li>
-                                    <a asp-area="Identity" asp-page="/Account/Register">Register</a>
-                                </li>
-                                <li>
-                                    <a asp-area="Identity" asp-page="/Account/Logout">Logout</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <form asp-action="SearchPosts" asp-controller="BlogPosts" class="input-group rounded w-50 px-4">
-                        <input type="search" class="form-control rounded" placeholder="Search..." aria-label="Search"
-                               aria-describedby="search-addon" name="searchTerm" />
-                        <button class="input-group-text border-0" type="submit" id="search-addon">
-                            <i class="fas fa-search"></i>
-                        </button>
-                    </form>
-                </div>
-            </div>
-        </nav>
-    </header>
+            </nav>
+        </header>
+    </div>
     <!-- navbar end -->
     @*<div class="banner-logo-area">
             <img src="~/img/Blog _Layout Head.png" alt="img">
         </div>*@
-    <div class="container-fluid">
+    <div class="container-fluid mt-5">
         @RenderBody()
     </div>
 
@@ -214,8 +216,14 @@
     <script src="~/js/slick-slider.min.js"></script>
     <script src="~/js/waypoint.js"></script>
     <script src="~/js/wow.min.js"></script>
+
     <!-- main js  -->
     <script src="~/js/main.js"></script>
+
+    <!-- JavaScript Bundle with Popper | I put this in-->
+    @*<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>*@
+
 
     <!--Tiny MCE-->
     <script src="https://cdn.tiny.cloud/1/6q3jild435pb80zy4oolee7eb53rppqg5te34ccqfh85haoy/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
