--- a/ShadowBlog/Views/BlogPosts/Edit.cshtml
+++ b/ShadowBlog/Views/BlogPosts/Edit.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-6">
-        <form asp-action="Edit" enctype="multipart/form-data">
+        <form id="frmCreate" asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="BlogId" />
@@ -44,8 +44,39 @@
                 <input asp-for="Image" class="form-control" />
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            @*Add a section for Tags*@
+            <div class="form-group pb-5">
+                <div class="row">
+                    <div class="col-6">
+                        <label class="control-label">Manage Tags</label>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-6">
+                        <div class="row mb-2">
+                            <div class="col">
+                                <input id="tagEntry" type="text" class="form-control" />
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <button type="button" class="btn btn-dark w-100" name="Add" onclick="AddTag()">Add</button>
+                            </div>
+                            <div class="col">
+                                <button type="button" class="btn btn-dark w-100" name="Delete" onclick="DeleteTag()">Delete</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <select name="TagValues" id="TagList" class="w-100" multiple>
+                            @*<options></options>*@
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
             </div>
         </form>
     </div>
@@ -56,4 +87,7 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+<script src="~/js/CustomTags.js"></script>
+
 }
