--- a/ShadowBlog/Views/Home/Index.cshtml
+++ b/ShadowBlog/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
 
 <!-- Banner Area Start-->
 <section class="banner-area">
-    <div class="banner-slider owl-carousel">
+    <div class="banner-slider owl-carousel owl-loaded">
         <div class="item" style="background: url(/img/BlogPostCarousel.png)">
             <div class="banner-inner">
                 <h4>Dev Blog</h4>
