--- a/ShadowBlog/Views/Shared/_Layout.cshtml
+++ b/ShadowBlog/Views/Shared/_Layout.cshtml
@@ -198,27 +198,26 @@
 
 
     <!-- all plugins here -->
-    <script src="~/js/bootstrap.min.js"></script>
-
     <script src="~/js/jquery.3.6.min.js"></script>
-    <script src="~/js/counterup.js"></script>
-    <script src="~/js/fontawesome.min.js"></script>
+    <script src="~/js/bootstrap.min.js"></script>
     <script src="~/js/imageloded.min.js"></script>
-    <script src="~/js/isotope.pkgd.min.js"></script>
-    <script src="~/js/magnific.min.js"></script>
-    <script src="~/js/nice-select.min.js"></script>
-    <script src="~/js/owl.min.js"></script>
-    <script src="~/js/ripple.js"></script>
-    <script src="~/js/slick-slider.min.js"></script>
+    <script src="~/js/counterup.js"></script>
     <script src="~/js/waypoint.js"></script>
+    <script src="~/js/magnific.min.js"></script>
+    <script src="~/js/isotope.pkgd.min.js"></script>
+    <script src="~/js/nice-select.min.js"></script>
+    <script src="~/js/fontawesome.min.js"></script>
+    <script src="~/js/ripple.js"></script>
+    <script src="~/js/owl.min.js"></script>
+    <script src="~/js/slick-slider.min.js"></script>
     <script src="~/js/wow.min.js"></script>
-
+    <script src="~/js/jhcustom.js"></script>
     <!-- main js  -->
     <script src="~/js/main.js"></script>
 
     <!-- JavaScript Bundle with Popper | I put this in-->
-    @*<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-        </script>*@
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+        </script>
 
 
     <!--Tiny MCE-->
