--- a/ShadowBlog/Views/BlogPosts/Details.cshtml
+++ b/ShadowBlog/Views/BlogPosts/Details.cshtml
@@ -48,26 +48,14 @@
                                 </div>
                                 <div class="col-lg-6 col-md-8 col-sm-7 text-sm-end">
                                     <div class="tag-inner">
-                                        <span><a href="#">#BLOG</a></span>
-                                        <span><a href="#">#WOMEN</a></span>
-                                        <span><a href="#">#FASHION</a></span>
-                                        <span><a href="#">#SWIMWEAR</a></span>
+                                        @foreach (var tag in Model.Tags)
+                                        {
+                                            <a asp-action="TagIndex" asp-route-tag="@tag.Text" >#@tag.Text</a>
+                                        }
                                     </div>
                                 </div>
                             </div>
                         </div>
-
-                        <article>
-                            <hr />
-                            <h3 class="text-center fw-bold">Tags</h3>
-                            <div class="col text-center">
-                                @foreach (var tag in Model.Tags)
-                                {
-                                    <a asp-action="TagIndex" asp-route-tag="@tag.Text" class="btn btn-sm btn-warning btn-outline-dark">#@tag.Text</a>
-                                }
-                            </div>
-                            <hr />
-                        </article>
 
                         <div class="comments-inner-wrap">
                             <h3 class="comments-title mt-5">Leave A Reply</h3>
