--- a/ShadowBlog/Views/BlogPosts/TagIndex.cshtml
+++ b/ShadowBlog/Views/BlogPosts/TagIndex.cshtml
@@ -54,7 +54,7 @@
                             <div class="post-meta">
                                 <ul>
                                     <li>By</li>
-                                    <li><a href="#">Jordan Hopps</a></li> @*Add link to take them to my portfolio*@
+                                    <li><a href="#">Jordan Hopps</a></li> @*TODO: Add link to take them to my portfolio*@
                                     <li>@blogPost.Created.ToString("MMM dd, yyyy")</li>
                                 </ul>
                             </div>
@@ -62,9 +62,6 @@
                     </div>
                 </div>
             }
-            <div class="col-lg-12 text-center mt-5">
-                <a class="btn btn-gray-border" href="home-2.html">LOAD MORE POSTS</a>
-            </div>
         </div>
         <<hr />
         <div class="row">
