--- a/ShadowBlog/Views/Shared/_Layout.cshtml
+++ b/ShadowBlog/Views/Shared/_Layout.cshtml
@@ -68,6 +68,9 @@
                    asp-page="/Account/Login">Log In</a>
             </li>
             <li>
+                <a asp-area="Identity" asp-page="/Account/Manage/Index">Manage Account</a>
+            </li>
+            <li>
                 <a asp-area="Identity"
                    asp-page="/Account/Register">Register</a>
             </li>
@@ -106,9 +109,6 @@
                             <li>
                                 <a asp-controller="Home" asp-action="ContactMe">Contact</a>
                             </li>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fab fa-github"></i></a></li>
-                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                             <li class="current-menu-item menu-item-has-children">
                                 Account
                                 <ul class="sub-menu">
@@ -126,6 +126,9 @@
                                     </li>
                                 </ul>
                             </li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-github"></i></a></li>
+                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                         </ul>
                         <form asp-action="SearchPosts" asp-controller="BlogPosts" class="input-group rounded w-50 px-4">
                             <input type="search" class="form-control rounded" placeholder="Search..." aria-label="Search"
@@ -217,7 +220,7 @@
 
     <!-- JavaScript Bundle with Popper | I put this in-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-        </script>
+    </script>
 
 
     <!--Tiny MCE-->
